# Gym-Tracker

./: .gitignore  README.md
.env/: pyvenv.cfg
client/: data_vizualizing.html  package-lock.json  package.json
client/src/components/: Main.vue  Tab.vue  TabsWrapper.vue  Visualization.vue
client/src/router/: index.js
client/static/: edge-impulse-standalone.js
server/: app.py  ble_tool.py  eim_ble_tool.py  model_runner.py  original_runner.py  requirements.txt
test_system/: .env.example  docker-compose.yml  start.sh
test_system/wasmiot-orchestrator/: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  client.Dockerfile  docker-compose.devcontainer.yml  docker-compose.example-devices.yml  docker-compose.lan.yml  docker-compose.mongo-express.yml  docker-compose.nginx.yml  docker-compose.vm.yml  docker-compose.yml  package-lock.json  package.json
test_system/wasmiot-supervisor/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
test_system/wasmiot-supervisor/.devcontainer/: devcontainer.json
test_system/wasmiot-supervisor/.github/workflows/: docker-image.yml
test_system/wasmiot-supervisor/host_app/: __main__.py
test_system/wasmiot-supervisor/host_app/flask_app/: app.py  zc.py
test_system/wasmiot-supervisor/host_app/flask_app/logging/: logger.py  sentry.py
test_system/wasmiot-supervisor/host_app/utils/: __init__.py  configuration.py  deployment.py  endpoint.py  logger.py  mount.py  routes.py
test_system/wasmiot-supervisor/host_app/wasm_utils/: general_utils.py  wasm.py  wasm3.py  wasm_api.py  wasmtime.py
(+99 files in other folders)
